# Vichintarka

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GITHUB_SETUP.md  PRD.md  README.md  SETUP_COMPLETE.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 1628aaa4d504_initial.py
app/: main.py
app/api/routers/: health.py
app/core/: config.py
app/db/: session.py
scripts/: docker-dev.sh  init-db.sql  redis.conf
tests/: conftest.py  test_health.py
tests/integration/: test_docker_integration.py
